Fix color contrast issues with entry dates and footer text

--- a/_sass/layout/_entries.scss
+++ b/_sass/layout/_entries.scss
@@ -14,7 +14,7 @@
 
 .entry-date {
   font-size: calc-em(12px);
-  color: #bbb;
+  color: #888;
 }
 
 .entry-title {
