--- a/_sass/layout/_structure.scss
+++ b/_sass/layout/_structure.scss
@@ -87,7 +87,7 @@
 .powered-by {
   margin: 0;
   font-size: calc-em(11px);
-  color: #2d0000;
+  color: #eee;
 
   a {
     text-decoration: none;
